[metadata]
name = InnuendoAgent
author = Juan Urrego
author-email = openstack-dev@lists.openstack.org
summary = Python Agent for innuendo.io. It profiles and monitors a runtime code and it is capable to patch the code remotely
description-file = README.md
home-page = https://github.com/juancho088/innuendo-agent-python
license = MIT License
keywords =
    newrelic
    graphite
    patch
    hotfix
    monitor
    health
    watch
    supervisor
    hypervisor

[files]
packages =
    innuendo
data_files =
    innuendo/config = innuendo/config/*

[entry_points]
console_scripts =
    innuendo-agent = innuendo:main